[gd_scene load_steps=64 format=2]

[ext_resource path="res://Scenes/KinematicBody2D.gd" type="Script" id=1]
[ext_resource path="res://Scenes/PauseMenu/Pause.gd" type="Script" id=2]
[ext_resource path="res://AllSprites/Sprites/13-Dialogue Boxes/lunchds.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes/PauseMenu/Resume.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Scena1/Guide.gd" type="Script" id=5]
[ext_resource path="res://Scenes/PauseMenu/TitleScreen.gd" type="Script" id=6]
[ext_resource path="res://assets/RPGIcons/tile005.png" type="Texture" id=7]
[ext_resource path="res://Scenes/PauseMenu/PointerPauseMenu.gd" type="Script" id=8]
[ext_resource path="res://Audio/changeOption.wav" type="AudioStream" id=9]
[ext_resource path="res://Audio/rejectOption.wav" type="AudioStream" id=10]
[ext_resource path="res://Audio/confirm.wav" type="AudioStream" id=11]
[ext_resource path="res://Entities/Player/01-King Human/Idle/tile000.png" type="Texture" id=12]
[ext_resource path="res://Entities/Player/01-King Human/Idle/tile001.png" type="Texture" id=13]
[ext_resource path="res://Entities/Player/01-King Human/Idle/tile002.png" type="Texture" id=14]
[ext_resource path="res://Entities/Player/01-King Human/Idle/tile003.png" type="Texture" id=15]
[ext_resource path="res://Entities/Player/01-King Human/Idle/tile004.png" type="Texture" id=16]
[ext_resource path="res://Entities/Player/01-King Human/Idle/tile005.png" type="Texture" id=17]
[ext_resource path="res://Entities/Player/01-King Human/Idle/tile006.png" type="Texture" id=18]
[ext_resource path="res://Entities/Player/01-King Human/Idle/tile007.png" type="Texture" id=19]
[ext_resource path="res://Entities/Player/01-King Human/Idle/tile008.png" type="Texture" id=20]
[ext_resource path="res://Entities/Player/01-King Human/Idle/tile009.png" type="Texture" id=21]
[ext_resource path="res://Entities/Player/01-King Human/Idle/tile010.png" type="Texture" id=22]
[ext_resource path="res://Entities/Player/01-King Human/Death/tile000.png" type="Texture" id=23]
[ext_resource path="res://Entities/Player/01-King Human/Death/tile001.png" type="Texture" id=24]
[ext_resource path="res://Entities/Player/01-King Human/Death/tile002.png" type="Texture" id=25]
[ext_resource path="res://Entities/Player/01-King Human/Death/tile003.png" type="Texture" id=26]
[ext_resource path="res://Entities/Player/01-King Human/Hit/tile000.png" type="Texture" id=27]
[ext_resource path="res://Entities/Player/01-King Human/Hit/tile001.png" type="Texture" id=28]
[ext_resource path="res://Entities/Player/01-King Human/Attack/tile000.png" type="Texture" id=29]
[ext_resource path="res://Entities/Player/01-King Human/Attack/tile001.png" type="Texture" id=30]
[ext_resource path="res://Entities/Player/01-King Human/Attack/tile002.png" type="Texture" id=31]
[ext_resource path="res://Entities/Player/01-King Human/Ground (78x58).png" type="Texture" id=32]
[ext_resource path="res://Entities/Player/01-King Human/Fall (78x58).png" type="Texture" id=33]
[ext_resource path="res://Entities/Player/01-King Human/DoorOut/tile000.png" type="Texture" id=34]
[ext_resource path="res://Entities/Player/01-King Human/DoorOut/tile001.png" type="Texture" id=35]
[ext_resource path="res://Entities/Player/01-King Human/DoorOut/tile002.png" type="Texture" id=36]
[ext_resource path="res://Entities/Player/01-King Human/DoorOut/tile003.png" type="Texture" id=37]
[ext_resource path="res://Entities/Player/01-King Human/DoorOut/tile004.png" type="Texture" id=38]
[ext_resource path="res://Entities/Player/01-King Human/DoorOut/tile005.png" type="Texture" id=39]
[ext_resource path="res://Entities/Player/01-King Human/DoorOut/tile006.png" type="Texture" id=40]
[ext_resource path="res://Entities/Player/01-King Human/DoorOut/tile007.png" type="Texture" id=41]
[ext_resource path="res://Entities/Player/01-King Human/Jump (78x58).png" type="Texture" id=42]
[ext_resource path="res://Entities/Player/01-King Human/Run/tile000.png" type="Texture" id=43]
[ext_resource path="res://Entities/Player/01-King Human/Run/tile001.png" type="Texture" id=44]
[ext_resource path="res://Entities/Player/01-King Human/Run/tile002.png" type="Texture" id=45]
[ext_resource path="res://Entities/Player/01-King Human/Run/tile003.png" type="Texture" id=46]
[ext_resource path="res://Entities/Player/01-King Human/Run/tile004.png" type="Texture" id=47]
[ext_resource path="res://Entities/Player/01-King Human/Run/tile005.png" type="Texture" id=48]
[ext_resource path="res://Entities/Player/01-King Human/Run/tile006.png" type="Texture" id=49]
[ext_resource path="res://Entities/Player/01-King Human/Run/tile007.png" type="Texture" id=50]
[ext_resource path="res://assets/Keyboard & Mouse/Light/Keyboard_White_Enter_Alt.png" type="Texture" id=51]
[ext_resource path="res://Audio/bomb_pickup_sound.wav" type="AudioStream" id=52]
[ext_resource path="res://Audio/jumpSound.wav" type="AudioStream" id=53]
[ext_resource path="res://Audio/bombDropSound.wav" type="AudioStream" id=54]
[ext_resource path="res://Audio/damageTaken.wav" type="AudioStream" id=55]
[ext_resource path="res://Audio/gameOver.wav" type="AudioStream" id=56]
[ext_resource path="res://Audio/swing.wav" type="AudioStream" id=57]
[ext_resource path="res://Scenes/HammerHitbox.gd" type="Script" id=58]

[sub_resource type="DynamicFont" id=1]
size = 150
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 9.09615, 12.4611 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ) ],
"loop": false,
"name": "death",
"speed": 3.0
}, {
"frames": [ ExtResource( 27 ), ExtResource( 28 ) ],
"loop": true,
"name": "hit",
"speed": 3.0
}, {
"frames": [ ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ) ],
"loop": false,
"name": "attack",
"speed": 8.0
}, {
"frames": [ ExtResource( 32 ) ],
"loop": false,
"name": "ground",
"speed": 5.0
}, {
"frames": [ ExtResource( 33 ) ],
"loop": false,
"name": "falling",
"speed": 5.0
}, {
"frames": [ ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ) ],
"loop": false,
"name": "door_out",
"speed": 9.0
}, {
"frames": [ ExtResource( 42 ) ],
"loop": false,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ) ],
"loop": true,
"name": "run",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 11.444, 18.9335 )

[node name="Player" type="KinematicBody2D"]
editor/display_folded = true
position = Vector2( 321.8, 286.585 )
scale = Vector2( 2, 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 14.2105, -12.6316 )
scale = Vector2( 1.36437, 1.43557 )
offset = Vector2( -550, -550 )
anchor_mode = 0
current = true
zoom = Vector2( 0.7, 0.7 )

[node name="PauseLayer" type="CanvasLayer" parent="Camera2D"]
pause_mode = 2
layer = 2

[node name="Pause" type="Control" parent="Camera2D/PauseLayer"]
pause_mode = 2
visible = false
margin_left = 528.999
margin_top = 187.816
margin_right = 1421.0
margin_bottom = 856.816
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="Camera2D/PauseLayer/Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0509804, 0.121569, 0.223529, 0.831373 )

[node name="MarginContainer" type="MarginContainer" parent="Camera2D/PauseLayer/Pause/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 110.0
margin_top = 38.0
margin_right = -69.9999
margin_bottom = 2.0

[node name="VBoxContainer" type="VBoxContainer" parent="Camera2D/PauseLayer/Pause/ColorRect/MarginContainer"]
margin_right = 712.0
margin_bottom = 633.0

[node name="Title" type="Label" parent="Camera2D/PauseLayer/Pause/ColorRect/MarginContainer/VBoxContainer"]
margin_right = 712.0
margin_bottom = 151.0
custom_fonts/font = SubResource( 1 )
text = "Pause"
align = 1

[node name="MenuEntries" type="VBoxContainer" parent="Camera2D/PauseLayer/Pause/ColorRect/MarginContainer/VBoxContainer"]
pause_mode = 2
margin_top = 155.0
margin_right = 712.0
margin_bottom = 633.0
size_flags_vertical = 3
custom_constants/separation = 15
alignment = 1

[node name="Resume" type="Label" parent="Camera2D/PauseLayer/Pause/ColorRect/MarginContainer/VBoxContainer/MenuEntries"]
pause_mode = 2
margin_top = 72.0
margin_right = 712.0
margin_bottom = 173.0
custom_fonts/font = SubResource( 2 )
text = "Resume"
script = ExtResource( 4 )

[node name="Guide" type="Label" parent="Camera2D/PauseLayer/Pause/ColorRect/MarginContainer/VBoxContainer/MenuEntries"]
pause_mode = 2
margin_top = 188.0
margin_right = 712.0
margin_bottom = 289.0
custom_fonts/font = SubResource( 2 )
text = "Guide"
script = ExtResource( 5 )

[node name="TitleScreen" type="Label" parent="Camera2D/PauseLayer/Pause/ColorRect/MarginContainer/VBoxContainer/MenuEntries"]
pause_mode = 2
margin_top = 304.0
margin_right = 712.0
margin_bottom = 405.0
custom_fonts/font = SubResource( 2 )
text = "Title Screen"
script = ExtResource( 6 )

[node name="Pointer" type="Sprite" parent="Camera2D/PauseLayer/Pause/ColorRect/MarginContainer/VBoxContainer/MenuEntries"]
pause_mode = 2
editor/display_folded = true
position = Vector2( -41.9886, 96.8071 )
scale = Vector2( 5, 5 )
texture = ExtResource( 7 )
script = ExtResource( 8 )

[node name="Sounds" type="Node" parent="Camera2D/PauseLayer/Pause/ColorRect/MarginContainer/VBoxContainer/MenuEntries/Pointer"]
pause_mode = 2

[node name="changeOption" type="AudioStreamPlayer" parent="Camera2D/PauseLayer/Pause/ColorRect/MarginContainer/VBoxContainer/MenuEntries/Pointer/Sounds"]
stream = ExtResource( 9 )
volume_db = -28.0

[node name="rejectOption" type="AudioStreamPlayer" parent="Camera2D/PauseLayer/Pause/ColorRect/MarginContainer/VBoxContainer/MenuEntries/Pointer/Sounds"]
stream = ExtResource( 10 )
volume_db = -15.0

[node name="confirmOption" type="AudioStreamPlayer" parent="Camera2D/PauseLayer/Pause/ColorRect/MarginContainer/VBoxContainer/MenuEntries/Pointer/Sounds"]
stream = ExtResource( 11 )
volume_db = -16.0

[node name="Hurtbox" type="CollisionShape2D" parent="."]
position = Vector2( -11.9297, 2.7294 )
shape = SubResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -4.20714, 0.205643 )
frames = SubResource( 4 )
animation = "idle"

[node name="BombsCooldown" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="EnterInteractionSprite" type="Sprite" parent="."]
visible = false
position = Vector2( -11.6098, -23.5514 )
scale = Vector2( 0.12, 0.15 )
texture = ExtResource( 51 )

[node name="Sounds" type="Node" parent="."]
editor/display_folded = true

[node name="PickUpBombSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 52 )
volume_db = -28.0

[node name="JumpSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 53 )
volume_db = -25.0

[node name="bombDropSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 54 )
volume_db = -22.0

[node name="damageTaken" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 55 )
volume_db = -20.0

[node name="gameOver" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 56 )
volume_db = -20.0

[node name="hammerSwing" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 57 )
volume_db = -18.0

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="HammerHitbox" type="Area2D" parent="."]
script = ExtResource( 58 )
__meta__ = {
"_edit_group_": true
}

[node name="HitboxCollision" type="CollisionShape2D" parent="HammerHitbox"]
position = Vector2( 15.5, 0.999985 )
shape = SubResource( 5 )
disabled = true

[node name="ActiveHammerHitbox" type="Timer" parent="HammerHitbox"]
wait_time = 0.4
one_shot = true

[node name="InvincibilityTime" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="BombRaycast" type="RayCast2D" parent="."]
visible = false
position = Vector2( -11.809, 2.42651 )
[connection signal="guide" from="Camera2D/PauseLayer/Pause/ColorRect/MarginContainer/VBoxContainer/MenuEntries/Guide" to="Camera2D/PauseLayer/Pause" method="_on_Guide_guide"]
